Intentionally break build to validate current java profile