@@ -676,7 +676,6 @@ under the License.
                 <redirectTestOutputToFile>true</redirectTestOutputToFile>
                 <reportsDirectory>${project.build.directory}/test-output/${maven.build.timestamp}</reportsDirectory>
                 <argLine>@{argLine}
-                  --add-exports java.base/jdk.internal.misc=ALL-UNNAMED
                   --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                   --add-opens java.base/java.nio=ALL-UNNAMED
                   --add-opens java.base/sun.nio.ch=ALL-UNNAMED
